Figuring out how to add csrf tokens to pages in v8 of the NHSUK Prototype kit.

--- a/app/views/layout-confirmation.html
+++ b/app/views/layout-confirmation.html
@@ -8,6 +8,7 @@
 {% extends "prototype-kit-template.njk" %}
 
 {% block head %}
+  <meta name="csrf-token" content="{{ csrfToken }}">
   <!-- Add your custom CSS or Sass in /app/assets/sass/main.scss -->
   <link href="/assets/sass/main.css" rel="stylesheet">
 {% endblock %}
